pkg/parser/permission_parser/PermissionExpr.g4
grammar PermissionExpr;

expr: term #atom 
    | expr operator term #nested
    | #empty //match empty string as valid expression (for default permissions)
    ;

term: relation #cu_term
      |resource '->' relation #ttu_term
      | '(' expr ')' #expr_term
      ; 

relation: IDENTIFIER;
resource: IDENTIFIER;
operator: '+' #union
        | '-' #difference
        | '&' #intersection
        ;

IDENTIFIER: [a-zA-Z] [a-zA-Z0-9_]*;
WS : [ \t]+ -> skip ; // skip spaces, tabs
